refactor: first half of migration

--- a/.luarc.json
+++ b/.luarc.json
@@ -1,4 +1,8 @@
 {
+    "diagnostics.disable": [
+        "inject-field",
+        "missing-fields"
+    ],
     "diagnostics.globals": [
         "vim"
     ]
