--- a/.stylua.toml
+++ b/.stylua.toml
@@ -1,5 +1,11 @@
-column_width = 160
-line_endings = "Unix"
+column_width = 120
 indent_type = "Spaces"
+indent_width = 4
 quote_style = "AutoPreferSingle"
-call_parentheses = "Always"
+call_parentheses = "NoSingleString"
+# collapse_simple_statement = "ConditionalOnly"
+collapse_simple_statement = "Never"
+space_after_function_names = "Never"
+
+[sort_requires]
+enabled = true
