--- a/.stylua.toml
+++ b/.stylua.toml
@@ -2,7 +2,7 @@ column_width = 120
 indent_type = "Spaces"
 indent_width = 4
 quote_style = "AutoPreferSingle"
-call_parentheses = "NoSingleString"
+call_parentheses = "Always"
 collapse_simple_statement = "Never"
 space_after_function_names = "Never"
 
